--- a/templates/core/add_brand.html
+++ b/templates/core/add_brand.html
@@ -2,6 +2,9 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% block title %}Brand Create{% endblock %}
+{% block navbar %}
+    {% include "core/utils/navbar.html" %}
+{% endblock %}
 {% block content %}
 <div class="container mt-5 w-50">
     <h2 class="text-center">Add Brand</h2>
