--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -19,7 +19,9 @@
                             <button type="submit" class="btn btn-success w-50">Register</button>
                         </div>
                         <div class="mx-auto text-center mt-3">
-                            <a type="button" class="btn btn-sm btn-info w-25" href="{% url "users:login" %}">login</a>
+                            <p>if you have account already, you can
+                                <a class="text-primary text-decoration-none" href="{% url "users:register" %}">login</a>
+                            </p>
                         </div>
 
                     </form>
