--- a/templates/core/add_phone.html
+++ b/templates/core/add_phone.html
@@ -2,6 +2,9 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% block title %}Phone Create{% endblock %}
+{% block navbar %}
+    {% include "core/utils/navbar.html" %}
+{% endblock %}
 {% block content %}
 <div class="container mt-5 w-50 mb-5">
     <h2 class="text-center">Add Phone</h2>
