--- a/templates/core/update_brand.html
+++ b/templates/core/update_brand.html
@@ -2,11 +2,19 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% block title %}Brand Update{% endblock %}
+{% block navbar %}
+    {% include "core/utils/navbar.html" %}
+{% endblock %}
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-5 w-50">
     <h2>Edit Brand</h2>
     <form method="post">
         {% csrf_token %}
+        {% if form.errors %}
+            <div class="errors">
+                {{ form.errors }}
+            </div>
+        {% endif %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary mt-3">Update Brand</button>
     </form>
