--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,7 +19,9 @@
                             <button type="submit" class="btn btn-success w-50">Login</button>
                         </div>
                         <div class="mx-auto text-center mt-3">
-                            <a type="button" class="btn btn-sm btn-info w-25" href="{% url "users:register" %}">register</a>
+                            <p>if you don't have account, you can
+                                <a class="text-primary text-decoration-none" href="{% url "users:register" %}">register</a>
+                            </p>
                         </div>
                     </form>
                 </div>
